# aurora-proxy-token

./: .catalog-info.yaml  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md
.github/workflows/: publish.yml  security.yml  test.yml
factory/: Cargo.toml
factory/src/: lib.rs
proxy-token/: Cargo.toml
proxy-token/src/: lib.rs  tests.rs
res/: aurora-mainnet-silo-3.8.0.wasm  aurora-mainnet-silo-3.9.0.wasm  aurora_proxy_token.wasm  mock-service.wasm
src/: lib.rs
src/tests/: helpers.rs  mod.rs  unit.rs  workspaces.rs
tests/: Cargo.toml  test_basics.rs
tests/src/: factory.rs  helpers.rs  lib.rs  workspaces.rs
