[package]
name = "aurora-proxy-token"
description = "cargo-near-new-project-description"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/aurora-is-near/aurora-proxy-token"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

# fields to configure build with WASM reproducibility, according to specs
# in https://github.com/near/NEPs/blob/master/neps/nep-0330.md
[package.metadata.near.reproducible_build]
# docker image, descriptor of build environment
image = "sourcescan/cargo-near:0.13.1-rust-1.83.0"
# tag after colon above serves only descriptive purpose; image is identified by digest
image_digest = "sha256:cc80ff2f2a42823ffd991eaf45ea9fada71ee206d79561eea4f40ecc27bff1be"
# list of environment variables names, whose values, if set, will be used as external build parameters
# in a reproducible manner
# supported by `sourcescan/cargo-near:0.10.1-rust-1.82.0` image or later images
passed_env = []
# build command inside of docker container
# if docker image from default gallery is used https://hub.docker.com/r/sourcescan/cargo-near/tags,
# the command may be any combination of flags of `cargo-near`,
# supported by respective version of binary inside the container besides `--no-locked` flag
container_build_command = ["cargo", "near", "build", "non-reproducible-wasm", "--locked"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
near-plugins = { git = "https://github.com/Near-One/near-plugins.git", tag = "v0.5.0" }
near-sdk = "5"
near-contract-standards = "5"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
anyhow = "1"
aurora-engine-sdk = { version = "1.2", features = ["std"] }
aurora-engine-types = { version = "1.2", features = ["std"] }
near-sdk = { version = "5", features = ["unit-testing"] }
near-workspaces = { version = "0.17", features = ["unstable"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
strip = "symbols"
